--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -1,8 +1,8 @@
 ---
-site_name: Template Python
-site_description: Documentation for the Template Python Project
+site_name: stock-quant-risk
+site_description: Documentation for the stock-quant-risk Python Project
 site_author: Mark Quinn
-repo_url: https://github.com/finsite/template_python
+repo_url: https://github.com/finsite/stock-quant-risk
 theme:
   name: material
 nav:
